[gd_scene load_steps=3 format=3 uid="uid://dvrwfpndahhq1"]

[ext_resource type="Script" path="res://components/debugger/debugger.gd" id="1_cemwh"]
[ext_resource type="Script" path="res://addons/c_timer/c_timer.gd" id="2_dv1cd"]

[node name="Debugger" type="MarginContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -225.0
offset_bottom = 390.0
grow_horizontal = 0
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24
script = ExtResource("1_cemwh")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2

[node name="SawInfo" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Sail level: -1"

[node name="AddSaw" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Add Circular Saw"

[node name="HBoxContainer1" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DowngradeSaw" type="Button" parent="VBoxContainer/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
text = "-1 Level"

[node name="UpgradeSaw" type="Button" parent="VBoxContainer/HBoxContainer1"]
layout_mode = 2
size_flags_horizontal = 3
text = "+1 Level"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="PistolInfo" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Pistol level: -1"

[node name="AddPistol" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Add Pistol"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DowngradePistol" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "-1 Level"

[node name="UpgradePistol" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "+1 Level"

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="LabelMS" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Monster spawned: %s"

[node name="LabelMK" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Monster killed: %s"

[node name="LabelMC" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Monster count: %s"

[node name="LabelBS" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Bullets shooted: %s"

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="LabelPlayerPos" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Player (%s, %s)"

[node name="LabelPlayersXP" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Player XP: %s"

[node name="PauseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Toggle Pause"

[node name="MarginContainer4" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 8
theme_override_constants/margin_bottom = 8

[node name="LabelSF" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Speed factor: %.3f"

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Decrease" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "-"

[node name="Reset" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "1"

[node name="Increase" type="Button" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
text = "+"

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 100.0
autostart = true

[node name="Label" type="Label" parent="Timer"]
offset_left = 12.0
offset_top = 6.0
offset_right = 107.0
offset_bottom = 29.0
text = "Timer: %s"
metadata/_edit_use_anchors_ = true

[node name="CustomTimer" type="Node" parent="."]
script = ExtResource("2_dv1cd")
wait_time = 100.0
autostart = true

[node name="Label" type="Label" parent="CustomTimer"]
offset_left = 10.0
offset_top = 30.0
offset_right = 166.0
offset_bottom = 53.0
text = "CTimer: %s"
